Add contact and services pages

--- a/data/contacts.yml
+++ b/data/contacts.yml
@@ -1,7 +1,7 @@
 ---
 
 email:       segfoltas@gmail.com
-phone:       +37060715900
+phone:       '+37060715900'
 twitter:     https://twitter.com/Segfoltas
 facebook:    https://www.facebook.com/segfoltas
 google_plus: https://plus.google.com/u/0/100871569377829011204/posts
