--- a/data/contacts.yml
+++ b/data/contacts.yml
@@ -7,3 +7,6 @@ facebook:    https://www.facebook.com/segfoltas
 google_plus: https://plus.google.com/u/0/100871569377829011204/posts
 address_one: 'Studentų g. 57, StartupSpace Unit 6'
 address_two: 'Kaunas, Lithuania'
+coordinates:
+  latitude:  54.903476
+  longitude: 23.960350
